--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Deploy with Docker Compose
         run: |
           set -e
+          git config --global --add safe.directory /home/ubuntu/apps/next-docker-ec2
           cd /home/ubuntu/apps/next-docker-ec2
           git fetch --all
           git reset --hard origin/main
