--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [ "main" ]
 
+concurrency:
+  group: deploy-main
+  cancel-in-progress: true
+
 jobs:
   deploy:
     runs-on: self-hosted
@@ -11,12 +15,22 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Debug
+        run: |
+          whoami
+          id
+          df -h /
+          free -m
+
       - name: Deploy with Docker Compose
         run: |
           set -e
           git config --global --add safe.directory /home/ubuntu/apps/next-docker-ec2
+          export NODE_OPTIONS=--max_old_space_size=512
+
           cd /home/ubuntu/apps/next-docker-ec2
           git fetch --all
           git reset --hard origin/main
+
           docker compose up -d --build
           docker image prune -f
